LLD + trees + graphs practise